--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "vite": "^6.2.4"
     },
     "dependencies": {
-        "alpinejs": "^3.14.9"
+        "alpinejs": "^3.14.9",
+        "bootstrap-icons": "^1.13.1"
     }
 }
